--- a/views/home.ejs
+++ b/views/home.ejs
@@ -142,7 +142,7 @@
   <div class="blog-area mt-30 section-padding-100">
     <div class="container">
       <div class="row">
-        <div class="col-6 offset-3">
+        <div class="col-lg-6 offset-lg-3">
           <div class="fitness-blog-posts">
 
             <div id="confessions-list"></div>
@@ -171,12 +171,12 @@
         <div class="col-12">
           <div class="cta-content d-flex justify-content-between align-items-center">
             <div class="cta-text">
-              <h4>Contact us now</h4>
+              <h4>Contact me now</h4>
               <h2>Do you have a question?</h2>
               <h6>Morbi quis venenatis augue, a tincidunt libero. Sed id porttitor elit, eu ultricies mauris.</h6>
             </div>
             <div class="cta-btn">
-              <a href="https://www.facebook.com/bachminhduc1996" target="_blank" class="btn musica-btn">contact us</a>
+              <a href="https://www.facebook.com/bachminhduc1996" target="_blank" class="btn musica-btn">contact me</a>
             </div>
           </div>
         </div>
@@ -205,6 +205,16 @@
     </div>
   </footer>
   <!-- ##### Footer Area Start ##### -->
+
+  <a id="writeCFS" class="write-cfs" href="#"
+    data-toggle="modal" data-target="#write-confession-dialog"
+    style="">
+    <i class="fa fa-pencil fa-3x"></i>
+  </a>
+
+  <!-- Modal -->
+  <div class="modal fade" id="write-confession-dialog" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  </div>
 
   <!-- ##### All Javascript Script ##### -->
   <!-- jQuery-2.2.4 js -->
