--- a/views/home.ejs
+++ b/views/home.ejs
@@ -38,7 +38,9 @@
           <nav class="classy-navbar justify-content-between" id="musicaNav">
 
             <!-- Nav brand -->
-            <a href="index.html" class="nav-brand"><img src="assets/musica/img/core-img/logo.png" alt=""></a>
+            <a href="#" class="nav-brand text-logo">
+              Mp3 Confessions
+            </a>
 
             <!-- Navbar Toggler -->
             <div class="classy-navbar-toggler">
@@ -56,66 +58,55 @@
               <!-- Nav Start -->
               <div class="classynav">
                 <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="about-us.html">About us</a></li>
-                  <li><a href="#">Pages</a>
+                  <li>
+                    <a target="_blank" href="http://nghethuatsong.com.vn/v712/6-loi-ich-cua-am-nhac.html">
+                      6 lợi ích của âm nhạc
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      Hot confessions khắp nơi
+                    </a>
                     <ul class="dropdown">
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="about-us.html">About Us</a></li>
-                      <li><a href="concert-tours.html">Concert &amp; Tours</a></li>
-                      <li><a href="blog.html">News</a></li>
-                      <li><a href="contact.html">Contact</a></li>
-                      <li><a href="elements.html">Elements</a></li>
+                      <li><a target="_blank" href="https://ione.vnexpress.net/tin-tuc/nhip-song/nhung-cau-to-tinh-chat-ngat-tren-confession-cac-truong-3097452.html">Những cfs tỏ tình chất ngất</a></li>
+                      <li><a target="_blank" href="https://news.zing.vn/nhung-confession-bach-khoa-lay-nuoc-mat-dan-mang-post500733.html">Những cfs rơi nước mắt</a></li>
+                      <li><a target="_blank" href="https://www.ohay.tv/list/cuoi-nghieng-nga-voi-confession-khong-the-ba-dao-hon/56f505a041">Những cfs không thể bá đạo hơn</a></li>
                     </ul>
                   </li>
-                  <li><a href="#">Mega Menu</a>
+                  <li><a href="#">Về tôi</a>
                     <div class="megamenu">
-                      <ul class="single-mega cn-col-4">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about-us.html">About Us</a></li>
-                        <li><a href="concert-tours.html">Concert &amp; Tours</a></li>
-                        <li><a href="blog.html">News</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="elements.html">Elements</a></li>
+                      <ul class="single-mega cn-col-3">
+                        <li><a target="_blank" href="https://www.facebook.com/bachminhduc1996/about/">Tôi là Đức</a></li>
+                        <li><a target="_blank" href="https://www.facebook.com/photo.php?fbid=1973884699385722&set=t.100004043929299&type=3&theater">Cử nhân Software Engineering - ĐH FPT</a></li>
+                        <li><a target="_blank" href="https://www.facebook.com/nusschoolofcomputing/photos/a.10153854768598885/10153854775023885/?type=3&theater">ACM-ICPC Singapore 2015</a></li>
+                        <li><a target="_blank" href="https://www.facebook.com/pg/khoapham.vn/photos/?tab=album&album_id=430081990497031">Game iOS "Just Get Candies"</a></li>
                       </ul>
-                      <ul class="single-mega cn-col-4">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about-us.html">About Us</a></li>
-                        <li><a href="concert-tours.html">Concert &amp; Tours</a></li>
-                        <li><a href="blog.html">News</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="elements.html">Elements</a></li>
+                      <ul class="single-mega cn-col-3">
+                        <li><a target="_blank" href="http://cocdoc.fpt.edu.vn/tin-tuc/21147/de-gio-cuon-di-dem-nhac-y-nghia-cua-sv-dh-fpt-danh-cho-tre-em-nhan-16">Đêm nhạc "Để gió cuốn đi"</a></li>
+                        <li><a target="_blank" href="https://www.youtube.com/watch?v=oACO_OqZAu8">Đẹp Quá Em Ơi! - Nhạc chế</a></li>
+                        <li><a target="_blank" href="https://www.youtube.com/watch?v=b_YO34RHE34">Aloha - Harmonica & Guitar Cover</a></li>
+                        <li><a target="_blank" href="https://www.youtube.com/watch?v=HmWhc9wpU5g">Phim ngắn kinh dị</a></li>
                       </ul>
-                      <ul class="single-mega cn-col-4">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about-us.html">About Us</a></li>
-                        <li><a href="concert-tours.html">Concert &amp; Tours</a></li>
-                        <li><a href="blog.html">News</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="elements.html">Elements</a></li>
-                      </ul>
-                      <ul class="single-mega cn-col-4">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about-us.html">About Us</a></li>
-                        <li><a href="concert-tours.html">Concert &amp; Tours</a></li>
-                        <li><a href="blog.html">News</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="elements.html">Elements</a></li>
+                      <ul class="single-mega cn-col-3">
+                        <li><a target="_blank" href="https://www.facebook.com/bachminhduc1996">Xem Facebook</a></li>
+                        <li><a target="_blank" href="https://www.youtube.com/channel/UC1CiRlDHJFheKEJ2KL-iM3w/videos">Xem Youtube</a></li>
+                        <li><a target="_blank" href="http://codeforces.com/profile/minhduc150496">Xem profile Codeforces</a></li>
+                        <li><a target="_blank" href="https://github.com/minhduc150496">Xem Github</a></li>
                       </ul>
                     </div>
                   </li>
-                  <li><a href="concert-tours.html">Gallery</a></li>
-                  <li><a href="contact.html">Contact</a></li>
+                  <li>
+                    <a target="_blank" href="https://github.com/minhduc150496/Mp3Confessions">
+                      Source code
+                    </a>
+                  </li>
                 </ul>
 
                 <!-- Social Button -->
                 <div class="top-social-info">
-                  <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-                  <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                  <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                  <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
-                  <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-                  <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                  <a target="_blank" href="https://www.facebook.com/bachminhduc1996"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                  <a target="_blank" href="https://www.youtube.com/channel/UC1CiRlDHJFheKEJ2KL-iM3w/videos"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+                  <a target="_blank" href="http://codeforces.com/profile/minhduc150496"><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
                 </div>
 
               </div>
@@ -165,7 +156,8 @@
   <!-- ##### Blog Area End ##### -->
 
   <!-- ##### CTA Area Start ##### -->
-  <div class="musica-cta-area section-padding-100 bg-img bg-overlay2" style="background-image: url(assets/musica/img/blog-img/4.jpg);">
+  <div class="musica-cta-area section-padding-100 bg-img bg-overlay2" style="background-image: url(images/friends.jpg);background-size: contain;
+    background-position: right;background-color: black;">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -173,10 +165,9 @@
             <div class="cta-text">
               <h4>Contact me now</h4>
               <h2>Do you have a question?</h2>
-              <h6>Morbi quis venenatis augue, a tincidunt libero. Sed id porttitor elit, eu ultricies mauris.</h6>
-            </div>
-            <div class="cta-btn">
-              <a href="https://www.facebook.com/bachminhduc1996" target="_blank" class="btn musica-btn">contact me</a>
+              <div class="cta-btn">
+                <a href="https://www.facebook.com/bachminhduc1996" target="_blank" class="btn musica-btn">contact me via Facebook</a>
+              </div>
             </div>
           </div>
         </div>
@@ -186,14 +177,16 @@
   <!-- ##### CTA Area End ##### -->
 
   <!-- ##### Footer Area Start ##### -->
-  <footer class="footer-area section-padding-100-0">
+  <footer class="footer-area">
     <div class="container-fluid">
       <div class="row">
 
         <!-- Footer Widget Area -->
         <div class="col-12 col-md-12 col-xl-12">
-          <div class="footer-widget-area mb-100 text-center">
-            <a href="#"><img src="assets/musica/img/core-img/logo2.png" alt=""></a>
+          <div class="footer-widget-area text-center">
+            <a href="#" class="text-logo">
+              Mp3 Confessions
+            </a>
             <p class="copywrite-text"><a href="#"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
